[gd_scene load_steps=5 format=3 uid="uid://byv5lgkfbji2f"]

[ext_resource type="Texture2D" uid="uid://b68v8gsjrs0cl" path="res://assets/single_wall.png" id="1_ba31d"]
[ext_resource type="Script" path="res://scene/wall/wall.gd" id="1_juj5b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8pay5"]
size = Vector2(96, 93)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kiaj"]
size = Vector2(100, 99)

[node name="Wall" type="StaticBody2D" groups=["wall"]]
script = ExtResource("1_juj5b")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ba31d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_8pay5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_7kiaj")

[node name="WallTimerSpawn" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="WallTimerSpawn" to="." method="_on_wall_timer_spawn_timeout"]
